Bug 235913 - kgpg segfault when want sig a key
Summary: kgpg segfault when want sig a key
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-01 14:24 UTC by stars
Modified: 2010-05-09 11:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stars 2010-05-01 14:24:38 UTC
Application: kgpg (2.3.0)
KDE Platform Version: 4.4.2 (KDE 4.4.2)
Qt Version: 4.6.2
Operating System: Linux 2.6.32-21-generic x86_64
Distribution: Ubuntu 10.04 LTS

-- Information about the crash:
Hello,

I run kubuntu Lucid 10.04 on x86 64 and i was trying to signate my key and at this time, kgpg give me a segfault.

 -- Backtrace:
Application: KGpg (kgpg), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f64e1441780 (LWP 28504))]

Thread 2 (Thread 0x7f64cd13f710 (LWP 5453)):
#0  0x00007f64de213f53 in *__GI___poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f64daa714a9 in ?? () from /lib/libglib-2.0.so.0
#2  0x00007f64daa718fc in g_main_context_iteration () from /lib/libglib-2.0.so.0
#3  0x00007f64de967566 in QEventDispatcherGlib::processEvents (this=0x25dfd20, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:414
#4  0x00007f64de93c992 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#5  0x00007f64de93cd6c in QEventLoop::exec (this=0x7f64cd13ed90, flags=) at kernel/qeventloop.cpp:201
#6  0x00007f64de846d59 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:487
#7  0x00007f64de91d178 in QInotifyFileSystemWatcherEngine::run (this=0x28786f0) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f64de849775 in QThreadPrivate::start (arg=0x28786f0) at thread/qthread_unix.cpp:248
#9  0x00007f64dc9759ca in start_thread (arg=<value optimized out>) at pthread_create.c:300
#10 0x00007f64de22069d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f64e1441780 (LWP 28504)):
[KCrash Handler]
#5  0x00007f64de942d07 in QMetaObject::cast (this=0x4bf2c0, obj=0x2d5b450) at kernel/qmetaobject.cpp:266
#6  0x00000000004650eb in KeysManager::signLoop (this=0x25835f0, localsign=false, checklevel=3) at ../../kgpg/keysmanager.cpp:2021
#7  0x000000000047a329 in KeysManager::signkey (this=<value optimized out>) at ../../kgpg/keysmanager.cpp:1925
#8  0x000000000047daad in KeysManager::qt_metacall (this=0x25835f0, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x7fff30ca18b0) at ./keysmanager.moc:298
#9  0x00007f64de950e3f in QMetaObject::activate (sender=0x25a10f0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3293
#10 0x00007f64df525032 in QAction::triggered (this=0x2d5b450, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#11 0x00007f64df5270ab in QAction::activate (this=0x25a10f0, event=<value optimized out>) at kernel/qaction.cpp:1255
#12 0x00007f64df8e16ca in QAbstractButtonPrivate::click (this=0x281d8d0) at widgets/qabstractbutton.cpp:528
#13 0x00007f64df8e197c in QAbstractButton::mouseReleaseEvent (this=0x281d7a0, e=0x7fff30ca2210) at widgets/qabstractbutton.cpp:1121
#14 0x00007f64df9ad8ca in QToolButton::mouseReleaseEvent (this=0x2d5b450, e=0x2d5b450) at widgets/qtoolbutton.cpp:721
#15 0x00007f64df581582 in QWidget::event (this=0x281d7a0, event=0x7fff30ca2210) at kernel/qwidget.cpp:7998
#16 0x00007f64df52b22c in QApplicationPrivate::notify_helper (this=0x2436d90, receiver=0x281d7a0, e=0x7fff30ca2210) at kernel/qapplication.cpp:4300
#17 0x00007f64df531ecb in QApplication::notify (this=0x2431260, receiver=0x281d7a0, e=0x7fff30ca2210) at kernel/qapplication.cpp:3865
#18 0x00007f64e0236526 in KApplication::notify (this=0x2431260, receiver=0x281d7a0, event=0x7fff30ca2210) at ../../kdeui/kernel/kapplication.cpp:302
#19 0x00007f64de93e06c in QCoreApplication::notifyInternal (this=0x2431260, receiver=0x281d7a0, event=0x7fff30ca2210) at kernel/qcoreapplication.cpp:704
#20 0x00007f64df5310ae in QCoreApplication::sendEvent (receiver=0x281d7a0, event=0x7fff30ca2210, alienWidget=0x281d7a0, nativeWidget=0x2827d30, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>, spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#21 QApplicationPrivate::sendMouseEvent (receiver=0x281d7a0, event=0x7fff30ca2210, alienWidget=0x281d7a0, nativeWidget=0x2827d30, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>, spontaneous=true) at kernel/qapplication.cpp:2965
#22 0x00007f64df5b0f65 in QETWidget::translateMouseEvent (this=0x2827d30, event=<value optimized out>) at kernel/qapplication_x11.cpp:4368
#23 0x00007f64df5af8ac in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fff30ca2b30) at kernel/qapplication_x11.cpp:3501
#24 0x00007f64df5db882 in x11EventSourceDispatch (s=0x243a490, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#25 0x00007f64daa6d8c2 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#26 0x00007f64daa71748 in ?? () from /lib/libglib-2.0.so.0
#27 0x00007f64daa718fc in g_main_context_iteration () from /lib/libglib-2.0.so.0
#28 0x00007f64de967513 in QEventDispatcherGlib::processEvents (this=0x240e7a0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#29 0x00007f64df5db46e in QGuiEventDispatcherGlib::processEvents (this=0x2d5b450, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#30 0x00007f64de93c992 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#31 0x00007f64de93cd6c in QEventLoop::exec (this=0x7fff30ca2e60, flags=) at kernel/qeventloop.cpp:201
#32 0x00007f64de940aab in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#33 0x0000000000480d74 in main (argc=<value optimized out>, argv=<value optimized out>) at ../../kgpg/main.cpp:57

Reported using DrKonqi
Comment 1 Rolf Eike Beer 2010-05-09 11:10:24 UTC
SVN commit 1124523 by dakon:

fix corrupting list when trying to sign keys

If the private key selection was cancelled stale references would be left in the list of keys to sign. It was never checked if a key signing operation is already running so that list could get corrupted, too.

BUG:235913


 M  +10 -0     keysmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1124523
Comment 2 Rolf Eike Beer 2010-05-09 11:14:04 UTC
SVN commit 1124525 by dakon:

fix corrupting list when trying to sign keys

If the private key selection was cancelled stale references would be left in
the list of keys to sign. It was never checked if a key signing operation is
already running so that list could get corrupted, too.

CCBUG:235913

Forward-port of r1124523

 M  +10 -0     keysmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1124525