fix corrupting list when trying to sign keys

If the private key selection was cancelled stale references would be left in the list of keys to sign. It was never checked if a key signing operation is already running so that list could get corrupted, too.

BUG:235913

svn path=/branches/KDE/4.4/kdeutils/kgpg/; revision=1124523