keysmanager.cpp
@@ -1858,6 +1858,10 @@ void KeysManager::editGroup()
 
 void KeysManager::signkey()
 {
+	// another sign operation is still running
+	if (!signList.isEmpty())
+		return;
+
 	KgpgItemType tp;
 	QList<KGpgNode *> tmplist = iview->selectedNodes(NULL, &tp);
 	if (tmplist.isEmpty())
@@ -1906,6 +1910,7 @@ void KeysManager::signkey()
 	QPointer<KgpgSelectSecretKey> opts = new KgpgSelectSecretKey(this, imodel, signList.count());
 	if (opts->exec() != QDialog::Accepted) {
 		delete opts;
+		signList.clear();
 		return;
 	}
 
@@ -1928,6 +1933,10 @@ void KeysManager::signkey()
 
 void KeysManager::signuid()
 {
+	// another sign operation is still running
+	if (!signList.isEmpty())
+		return;
+
 	KgpgItemType tp;
 	QList<KGpgNode *> tmplist = iview->selectedNodes(NULL, &tp);
 	if (tmplist.isEmpty())
@@ -1985,6 +1994,7 @@ void KeysManager::signuid()
 	QPointer<KgpgSelectSecretKey> opts = new KgpgSelectSecretKey(this, imodel, signList.count());
 	if (opts->exec() != QDialog::Accepted) {
 		delete opts;
+		signList.clear();
 		return;
 	}
 
